--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default top-nav center">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -14,21 +14,35 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Machine Learning</a>
 				</div>
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Link</a></li>
+				<div class="collapse navbar-collapse navbar-inner" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Discussion</a></li>
+						<li><a href="#">Future Predictions</a></li>
+						<li><a href="#">References</a></li>
 					</ul>
 				</div>
 			</div>		
 		</nav>
 
+		<section id = "banner">
+			<div class = "container">
+				<div class = "row">
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-text">
+						<h1>Autonomous Vehicles and Machine Learning</h1>
+						<p>An investigation by Jacob Hackett, Tom Farro, Joe Fainer and Alex Huot</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="css/styles.css" rel="stylesheet">
 
-
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	</body>
