updating some content for the sept 20th deadline

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 
-		<nav class="navbar navbar-default top-nav center">
+		<nav class="navbar navbar-default top-nav center navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -18,11 +18,16 @@
 
 				<div class="collapse navbar-collapse navbar-inner" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Discussion</a></li>
-						<li><a href="#">Future Predictions</a></li>
-						<li><a href="#">References</a></li>
+						<li><a href="#banner">Home</a></li>
+						<li><a href="#netcomm">Networked Communications</a></li>
+						<li><a href="#ip">Intellectual Property</a></li>
+						<li><a href="#privacy">Privacy</a></li>
+						<li><a href="#security">Security</a></li>
+						<li><a href="#reliability">Reliability</a></li>
+						<li><a href="#ethics">Ethics</a></li>
+						<li><a href="#workwealth">Work &amp; Wealth</a></li>
+						<li><a href="minutes/">Minutes</a></li>
+						<li><a href="references/">References</a></li>
 					</ul>
 				</div>
 			</div>		
@@ -34,6 +39,103 @@
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-text">
 						<h1>Autonomous Vehicles and Machine Learning</h1>
 						<p>An investigation by Jacob Hackett, Tom Farro, Joe Fainer and Alex Huot</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "netcomm">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Networked Communications</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<ul>
+							<li>Telematics</li>
+								<ul>
+									<li>Update state of the world</li>
+									<li>Vehicle-vehicle and vehicle-infrastructure applications</li>
+									<li>Software updates</li>
+									<li>&quot;infotainment&quot;</li>
+									<li>Watch movies (source #2, Chapter 5)</li>
+								</ul>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "ip" class = "gray-section">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Intellectual Property</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<p>Intellectual Property is an interesting topic for this technology. On one hand, all of the algorithms and software used in the cars will be trade secrets proprietary to the company that develops them. On the other hand, most of the hardware that is fit on the car is patented.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "privacy">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Privacy</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<ul>
+							<li>Collect data concerning potential accidents, behavior of car and driver/other parties involved</li>
+							<li><a href = "http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5475093&isnumber=5475068">Study</a> That is a test study done that proves that with access to only GPS information of a car, you can identify the user and information about the user’s based on common traveling points.  The information is evaluated using the Parking, Duration of stay, Travel patterns, Visiting habits, Environment</li>
+							<li><a href = "http://libraries.state.ma.us.ezproxy.wpi.edu/login?gwurl=http://go.galegroup.com.ezproxy.wpi.edu/ps/i.do?p=ITOF&sw=w&u=mlin_c_worpoly&v=2.1&it=r&id=GALE%7CA420050557&sid=summon&asid=76d269a69405dd397765bfe4d32e06a1">Study</a> Look under the privacy sectioned paragraph
+							<li>This article discusses the potential risks involved with autonomous vehicles.  It notes that unless the car is completely removed from communicating with other networks, there is a privacy risk.  It can not only track where you are and where you have been but can &quot;also (track) &quot;his or her future travel plans,&quot; which could be employed for &quot;targeted marketing,&quot; &quot;law enforcement,&quot; or &quot;surveillance.&quot;</li>
+							<li><a href = "http://www.theatlantic.com/technology/archive/2016/03/self-driving-cars-and-the-looming-privacy-apocalypse/474600/v">Study</a> This source discusses in more detail the privacy risk and how marketing will exploit this information and therefore the cars thinking.</li>
+							<li>Who controls this information? (this and notes above from Chapter 24, Source #1)</li>
+							<ul>
+								<li>Addressed in the previous source as well (last paragraph of section B) a large degree over who gets to use this information is undetermined and is making its way through the national courts. </li>
+							</ul>
+							<li><a href = "http://ieeexplore.ieee.org.ezproxy.wpi.edu/xpls/icp.jsp?arnumber=6899663#cited-by">Study</a> This sources discusses all the potential cybersecurity issues that both autonomous vehicles and cooperative vehicles might face.  It runs through them, categorizing them as high, medium, and low. </li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "security" class = "black-section">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Security</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "reliability">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Reliability</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "ethics" class = "gray-section">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Professional Ethics</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "workwealth">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Work and Wealth</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
 					</div>
 				</div>
 			</div>
