--- a/index.html
+++ b/index.html
@@ -143,6 +143,26 @@
 			</div>
 		</section>
 
+		<section id = "movies">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>Related movies</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<ul>
+							<li>I, Robot</li>
+							<li>Minority Report</li>
+							<li>The Fifth Element</li>
+							<li>Total Recall</li>
+							<li>Various Batman movies</li>
+							<li>The Incredibles</li>
+							<li>Demolition Man</li>
+							<li>Time Cop</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="css/styles.css" rel="stylesheet">
 
