adding movies to navbar, oops forgot in last commit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<li><a href="#reliability">Reliability</a></li>
 						<li><a href="#ethics">Ethics</a></li>
 						<li><a href="#workwealth">Work &amp; Wealth</a></li>
+						<li><a href="#movies">Movies</a></li>
 						<li><a href="minutes/">Minutes</a></li>
 						<li><a href="references/">References</a></li>
 					</ul>
