--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Machine Learning</title>
+		<title>Autonomous Vehicles and Machine Learning</title>
 
 		<meta name=viewport content="width=device-width, initial-scale=1">
 	</head>
@@ -28,9 +28,9 @@
 						<li><a href="#reliability">Reliability</a></li>
 						<li><a href="#ethics">Ethics</a></li>
 						<li><a href="#workwealth">Work &amp; Wealth</a></li>
-						<li><a href="#movies">Movies</a></li>
+						<li><a href="#movies">Fiction</a></li>
+						<li><a href="#references">References</a></li>
 						<li><a href="minutes/">Minutes</a></li>
-						<li><a href="references/">References</a></li>
 					</ul>
 				</div>
 			</div>		
@@ -47,7 +47,7 @@
 			</div>
 		</section>
 
-		<section id = "netcomm">
+		<section id = "netcomm" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Networked Communications</h2></center>
@@ -67,7 +67,7 @@
 			</div>
 		</section>
 
-		<section id = "ip" class = "gray-section">
+		<section id = "ip" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Intellectual Property</h2></center>
@@ -78,7 +78,7 @@
 			</div>
 		</section>
 
-		<section id = "privacy">
+		<section id = "privacy" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Privacy</h2></center>
@@ -100,7 +100,7 @@
 			</div>
 		</section>
 
-		<section id = "security" class = "black-section">
+		<section id = "security" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Security</h2></center>
@@ -111,7 +111,7 @@
 			</div>
 		</section>
 
-		<section id = "reliability">
+		<section id = "reliability" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Reliability</h2></center>
@@ -122,7 +122,7 @@
 			</div>
 		</section>
 
-		<section id = "ethics" class = "gray-section">
+		<section id = "ethics" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Professional Ethics</h2></center>
@@ -133,7 +133,7 @@
 			</div>
 		</section>
 
-		<section id = "workwealth">
+		<section id = "workwealth" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>Work and Wealth</h2></center>
@@ -144,12 +144,13 @@
 			</div>
 		</section>
 
-		<section id = "movies">
+		<section id = "movies" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
-					<center><h2>Related movies</h2></center>
+					<center><h2>In Fiction</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<ul>
+							<li>Knight Rider</li>
 							<li>I, Robot</li>
 							<li>Minority Report</li>
 							<li>The Fifth Element</li>
@@ -158,6 +159,19 @@
 							<li>The Incredibles</li>
 							<li>Demolition Man</li>
 							<li>Time Cop</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id = "references" class = "sectionbox">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>References</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<ul>
+					
 						</ul>
 					</div>
 				</div>
