--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="#ethics">Ethics</a></li>
 						<li><a href="#workwealth">Work &amp; Wealth</a></li>
 						<li><a href="#movies">Fiction</a></li>
-						<li><a href="#references">References</a></li>
+						<li><a href="#refs">References</a></li>
 						<li><a href="minutes/">Minutes</a></li>
 					</ul>
 				</div>
@@ -165,7 +165,7 @@
 			</div>
 		</section>
 
-		<section id = "references" class = "sectionbox">
+		<section id = "refs" class = "sectionbox">
 			<div class = "container">
 				<div class = "row">
 					<center><h2>References</h2></center>
