--- a/fiction/index.html
+++ b/fiction/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Minutes</title>
+		<title>Fiction</title>
+
+		<meta name=viewport content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 
-		<nav class="navbar navbar-default top-nav center">
+		<nav class="navbar navbar-default top-nav center navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -16,7 +18,7 @@
 					</button>
 				</div>
 
-				<div class="collapse navbar-collapse navbar-inner" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse navbar-inner" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="../index.html#banner">Home</a></li>
 						<li class = "dropdown">
@@ -32,8 +34,8 @@
 							</ul>
 						</li>
 						<li><a href="../timeline/index.html#banner">Timeline</a></li>
-						<li><a href="../fiction/index.html#banner">Fiction</a></li>
-						<li><a href="#">Minutes</a></li>
+						<li><a href="#">Fiction</a></li>
+						<li><a href="../minutes/index.html#banner">Minutes</a></li>
 						<li><a href="../references/index.html#banner">References</a></li>
 					</ul>
 				</div>
@@ -51,12 +53,34 @@
 			</div>
 		</section>
 
+		<section id = "movies" class = "sectionbox">
+			<div class = "container">
+				<div class = "row">
+					<center><h2>In Fiction</h2></center>
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<ul>
+							<li>Knight Rider</li>
+							<li>I, Robot</li>
+							<li>Minority Report</li>
+							<li>The Fifth Element</li>
+							<li>Total Recall</li>
+							<li>Various Batman movies</li>
+							<li>The Incredibles</li>
+							<li>Demolition Man</li>
+							<li>Time Cop</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="../css/styles.css" rel="stylesheet">
 
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="../js/scripts.js"></script>
 
 	</body>
 </html>
