--- a/index.html
+++ b/index.html
@@ -21,16 +21,22 @@
 				<div class="collapse navbar-collapse navbar-inner" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="#banner">Home</a></li>
-						<li><a href="#netcomm">Networked Communications</a></li>
-						<li><a href="#ip">Intellectual Property</a></li>
-						<li><a href="#privacy">Privacy</a></li>
-						<li><a href="#security">Security</a></li>
-						<li><a href="#reliability">Reliability</a></li>
-						<li><a href="#ethics">Ethics</a></li>
-						<li><a href="#workwealth">Work &amp; Wealth</a></li>
-						<li><a href="#movies">Fiction</a></li>
-						<li><a href="#refs">References</a></li>
-						<li><a href="minutes/">Minutes</a></li>
+						<li class = "dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chapters<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#netcomm">Networked Communications</a></li>
+								<li><a href="#ip">Intellectual Property</a></li>
+								<li><a href="#privacy">Privacy</a></li>
+								<li><a href="#security">Security</a></li>
+								<li><a href="#reliability">Reliability</a></li>
+								<li><a href="#ethics">Ethics</a></li>
+								<li><a href="#workwealth">Work &amp; Wealth</a></li>
+							</ul>
+						</li>
+						<li><a href="timeline/index.html#banner">Timeline</a></li>
+						<li><a href="fiction/index.html#banner">Fiction</a></li>
+						<li><a href="minutes/index.html#banner">Minutes</a></li>
+						<li><a href="references/index.html#banner">References</a></li>
 					</ul>
 				</div>
 			</div>		
@@ -144,39 +150,6 @@
 			</div>
 		</section>
 
-		<section id = "movies" class = "sectionbox">
-			<div class = "container">
-				<div class = "row">
-					<center><h2>In Fiction</h2></center>
-					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<ul>
-							<li>Knight Rider</li>
-							<li>I, Robot</li>
-							<li>Minority Report</li>
-							<li>The Fifth Element</li>
-							<li>Total Recall</li>
-							<li>Various Batman movies</li>
-							<li>The Incredibles</li>
-							<li>Demolition Man</li>
-							<li>Time Cop</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section id = "refs" class = "sectionbox">
-			<div class = "container">
-				<div class = "row">
-					<center><h2>References</h2></center>
-					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<ul>
-					
-						</ul>
-					</div>
-				</div>
-			</div>
-		</section>
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="css/styles.css" rel="stylesheet">
