--- a/references/index.html
+++ b/references/index.html
@@ -19,14 +19,21 @@
 				<div class="collapse navbar-collapse navbar-inner" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="../index.html#banner">Home</a></li>
-						<li><a href="../index.html#netcomm">Networked Communications</a></li>
-						<li><a href="../index.html#ip">Intellectual Property</a></li>
-						<li><a href="../index.html#privacy">Privacy</a></li>
-						<li><a href="../index.html#security">Security</a></li>
-						<li><a href="../index.html#reliability">Reliability</a></li>
-						<li><a href="../index.html#ethics">Ethics</a></li>
-						<li><a href="../index.html#workwealth">Work &amp; Wealth</a></li>
-						<li><a href="../minutes/index.html">Minutes</a></li>
+						<li class = "dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chapters<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../index.html#netcomm">Networked Communications</a></li>
+								<li><a href="../index.html#ip">Intellectual Property</a></li>
+								<li><a href="../index.html#privacy">Privacy</a></li>
+								<li><a href="../index.html#security">Security</a></li>
+								<li><a href="../index.html#reliability">Reliability</a></li>
+								<li><a href="../index.html#ethics">Ethics</a></li>
+								<li><a href="../index.html#workwealth">Work &amp; Wealth</a></li>
+							</ul>
+						</li>
+						<li><a href="../timeline/index.html#banner">Timeline</a></li>
+						<li><a href="../fiction/index.html#banner">Fiction</a></li>
+						<li><a href="../minutes/index.html#banner">Minutes</a></li>
 						<li><a href="#">References</a></li>
 					</ul>
 				</div>
