--- a/timeline/index.html
+++ b/timeline/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Minutes</title>
+		<title>Timeline</title>
+
+		<meta name=viewport content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 
-		<nav class="navbar navbar-default top-nav center">
+		<nav class="navbar navbar-default top-nav center navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -16,7 +18,7 @@
 					</button>
 				</div>
 
-				<div class="collapse navbar-collapse navbar-inner" id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse navbar-inner" id="navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="../index.html#banner">Home</a></li>
 						<li class = "dropdown">
@@ -31,9 +33,9 @@
 								<li><a href="../index.html#workwealth">Work &amp; Wealth</a></li>
 							</ul>
 						</li>
-						<li><a href="../timeline/index.html#banner">Timeline</a></li>
+						<li><a href="#">Timeline</a></li>
 						<li><a href="../fiction/index.html#banner">Fiction</a></li>
-						<li><a href="#">Minutes</a></li>
+						<li><a href="../minutes/index.html#banner">Minutes</a></li>
 						<li><a href="../references/index.html#banner">References</a></li>
 					</ul>
 				</div>
@@ -57,6 +59,7 @@
 
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="../js/scripts.js"></script>
 
 	</body>
 </html>
