updating research and starting timeline

--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
 				<div class = "row">
 					<center><h2>Security</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					
+						<ul>
+							<li>This info is about cyberattacks and therefore network security.</li>
+							<li><a href = "http://ieeexplore.ieee.org.ezproxy.wpi.edu/xpls/icp.jsp?arnumber=6899663#cited-by">Source</a>This sources discusses all the potential cybersecurity issues that both autonomous vehicles and cooperative vehicles might face.  It runs through them, categorizing them as high, medium, and low.</li>
+							<li><a href = "http://www.navigantresearch.com/blog/cyber-security-is-imperative-before-deploying-autonomous-vehicles">Source</a>Sam Abuelsamid - Cyber Security Is Imperative Before Deploying Autonomous Vehicles. Discussed how Karamba is implementing security risk factors to reduce potential hacking of autonomous cars.</li>
+							<li><a href = "dms.sagepub.com/content/12/4/369.full.pdf+html">Source</a>Eray Yag ̆dereli, Cemal Gemci and A Ziya Aktas.  A study on cybersecurity of autonomous and unmanned vehicles.</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -122,7 +127,13 @@
 				<div class = "row">
 					<center><h2>Reliability</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
+						<ul>
+							<li><a href = "http://search.proquest.com/docview/1771016658?pq-origsite=summon&accountid=29120">Source</a>Google’s self-driving car hits bus</li>
+							<li>Miscalculated bus behavior</li>
+							<li>Moving to side in wide lane to avoid sandbags in lane</li>
+							<li>Assumed bus would slow down/give car the room it needed</li>
+							<li>Hit bus when it made the adjustments</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -133,7 +144,15 @@
 				<div class = "row">
 					<center><h2>Professional Ethics</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
+						<ul>
+							<li><a href = "http://wpi.aci.info/view/1464f257c855c0c0128/151c518857c00110006">Source</a>(watch video in article, not sure where it should go)</li>
+							<li>In case of accident (example given is something falling out of a truck in front of car and car is surrounded on all sides + can’t stop in time)</li>
+							<li>Decision is premade by programmers, Different from a reaction by a driver</li>
+							<li>Protect passenger at all cost? Or minimize harm to all?</li>
+							<li>Example from video: hit object in front, hit motorcyclist with helmet, hit motorcyclist without helmet, causes harm to passengers, causes harm to motorcyclist with helmet doing nothing wrong, causes harm to motorcyclist without helmet (street justice at this point)</li>
+							<li><a href = "http://wpi.aci.info/view/1427c3f7cbf114a0104/15116537d2800010003">Source</a></li>
+							<li><a href = "https://www.youtube.com/watch?v=ixIoDYVfKA0">Video</a>ethics of autonomous cars</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -144,7 +163,11 @@
 				<div class = "row">
 					<center><h2>Work and Wealth</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
+						<ul>
+							<li><a href = "http://www.driverless-future.com/?p=911 ">Source</a> Annual report warns that driverless cars could disrupt AllState’s insurance business. Report suggest that with the implementation of autonomous cars, Allstate, and potentially other insurance, companies will be ruined due to the reliability of  the cars and therefore a lack of accidents thriving their business.  </li>
+							<li><a href = "https://www.youtube.com/watch?v=ixIoDYVfKA0">Video</a></li>
+							<li><a href = "https://www.youtube.com/watch?v=5UBdrMTxsvs">Video</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
