--- a/timeline/index.html
+++ b/timeline/index.html
@@ -63,8 +63,8 @@
 			          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+			              <h4 class="timeline-title">Radio Controlled Driverless Car</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1925</small></p>
 			            </div>
 			            <div class="timeline-body">
 			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -75,7 +75,8 @@
 			          <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+			              <h4 class="timeline-title">Electrical Guide System</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1950s</small></p>
 			            </div>
 			            <div class="timeline-body">
 			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -87,7 +88,8 @@
 			          <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+			              <h4 class="timeline-title">Vision Guide Systems</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1980s</small></p>
 			            </div>
 			            <div class="timeline-body">
 			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
