--- a/timeline/index.html
+++ b/timeline/index.html
@@ -63,11 +63,11 @@
 			          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Radio Controlled Driverless Car</h4>
-			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1925</small></p>
+			              <h4 class="timeline-title">Tukuba Mechanical engineering lab built the first self-driving vehicle.</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1977</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+			              <p>It achieved speeds of up to 20 miles per hour, by tracking white street markers for up to 50 meters.</p>
 			            </div>
 			          </div>
 			        </li>
@@ -75,12 +75,11 @@
 			          <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Electrical Guide System</h4>
-			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1950s</small></p>
+			              <h4 class="timeline-title">Work of Ernst Dickmanns and his team at Bundeswehr Universität München</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1980’s</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-			              <p>Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Interagi no mé, cursus quis, vehicula ac nisi. Aenean vel dui dui. Nullam leo erat, aliquet quis tempus a, posuere ut mi. Ut scelerisque neque et turpis posuere pulvinar pellentesque nibh ullamcorper. Pharetra in mattis molestie, volutpat elementum justo. Aenean ut ante turpis. Pellentesque laoreet mé vel lectus scelerisque interdum cursus velit auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ac mauris lectus, non scelerisque augue. Aenean justo massa.</p>
+			              <p>Vision-guided Mercedes-Benz robot van could achieve 60 miles per hour on streets without traffic.</p>
 			            </div>
 			          </div>
 			        </li>
@@ -88,21 +87,22 @@
 			          <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Vision Guide Systems</h4>
-			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1980s</small></p>
+			              <h4 class="timeline-title">Pan-European PROMETHEUS Project (the largest autonomous vehicle project ever)</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1987-1995</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+			              <p>The prototype car achieved speeds exceeding 110 miles per hour on the German Autobahn. Unlike the early robot cars it drove in traffic, executing maneuvers to pass other cars.</p>
 			            </div>
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+			              <h4 class="timeline-title">CMU Navlab "No Hands Across America Project"</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1995</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+			              <p>The car made almost 3000 miles 98.2% autonomously. Throttle and brakes needed human control.</p>
 			            </div>
 			          </div>
 			        </li>
@@ -110,33 +110,22 @@
 			          <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+			              <h4 class="timeline-title">AHS Demo ’97</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>1997</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-			              <hr>
-			              <div class="btn-group">
-			                <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-			                  <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-			                </button>
-			                <ul class="dropdown-menu" role="menu">
-			                  <li><a href="#">Action</a></li>
-			                  <li><a href="#">Another action</a></li>
-			                  <li><a href="#">Something else here</a></li>
-			                  <li class="divider"></li>
-			                  <li><a href="#">Separated link</a></li>
-			                </ul>
-			              </div>
+			              <p>More than 20 fully automated vehicles operated on a highway in San Diego, California</p>
 			            </div>
 			          </div>
 			        </li>
 			        <li>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+			              <h4 class="timeline-title">CARSENSE</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2000-2002</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+			              <p>This project concentrated on slow speed driving with more complicated situations such as, traffic jams. The prototype made use of a wide range of sensors including stereo camera vision, lasers and radars.</p>
 			            </div>
 			          </div>
 			        </li>
@@ -144,10 +133,107 @@
 			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
-			              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+			              <h4 class="timeline-title">AHSRA Demo 2000 (Japan)</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2000</small></p>
 			            </div>
 			            <div class="timeline-body">
-			              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+			              <p>38 cars, buses and trucks illustrated the ideal system for reducing road traffic accidents using driver information and control assist systems. The automation system made use of magnetic sensors on the road</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">CHAMELEON</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2000-2003</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>The system was composed of a sensor module for obstacle detection (vision system, medium range radar, laser scanner, laser, short range radar) and a processing module for crash prediction (control unit). Output was intended to be used by an advanced passive safety system on board.</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">DARPA Demo III</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2001</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>Demonstrated the ability of unmanned ground vehicles to navigate miles of difficult off-road terrain, avoiding obstacles such as rocks and trees.</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">AARCOS (Research Action for Secure Driving) (France)</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2001-2004</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>This project aimed reducing accidents by 30%. The main functions were controlling inter-vehicle distances, avoiding collisions with fixed or slowly moving objects, avoiding lane departure, and alerting other vehicles of accidents.</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">CarTALK 2000</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2001-2004</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>This European project focused on the new driver assistance systems which are based upon inter-vehicle communication</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">NVENT (Intelligent traffic and user-oriented technology) (Germany)</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2001-2005</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>The main purpose of this project was to improve the traffic flow and safety by using intelligent and user-friendly systems. The prototypes were tested in the city of Magdeburg, Germany in April 2005.</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">PREVENT (EU)</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2004-2008</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>This project is aiming to develop and test safety-related applications, using existing devices that can be integrated into on-board systems for driver assistance. PREVENT will warn drivers in hazard situations and take action if the driver doesn’t respond.</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">DARPA Grand Challenge II</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2005</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>It was designed to be a race in the desert environment with no traffic. The course was predefined by GPS points and obstacle types were known in advance. Stanford Univ. team won the race.</p>
+			            </div>
+			          </div>
+			        </li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-panel">
+			            <div class="timeline-heading">
+			              <h4 class="timeline-title">DARPA Grand Challenge III</h4>
+			              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>2007</small></p>
+			            </div>
+			            <div class="timeline-body">
+			              <p>DARPA will hold its third Grand Challenge competition on November 3, 2007. It will be held in an urban environment, featuring autonomous ground vehicles conducting military supply missions.</p>
 			            </div>
 			          </div>
 			        </li>
