--- a/timeline/index.html
+++ b/timeline/index.html
@@ -60,7 +60,7 @@
 			    </div>
 			    <ul class="timeline">
 			        <li>
-			          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">Tukuba Mechanical engineering lab built the first self-driving vehicle.</h4>
@@ -72,7 +72,7 @@
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
-			          <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">Work of Ernst Dickmanns and his team at Bundeswehr Universität München</h4>
@@ -84,7 +84,7 @@
 			          </div>
 			        </li>
 			        <li>
-			          <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">Pan-European PROMETHEUS Project (the largest autonomous vehicle project ever)</h4>
@@ -96,6 +96,7 @@
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">CMU Navlab "No Hands Across America Project"</h4>
@@ -107,7 +108,7 @@
 			          </div>
 			        </li>
 			        <li>
-			          <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">AHS Demo ’97</h4>
@@ -118,7 +119,8 @@
 			            </div>
 			          </div>
 			        </li>
-			        <li>
+			        <li class="timeline-inverted">
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">CARSENSE</h4>
@@ -129,8 +131,8 @@
 			            </div>
 			          </div>
 			        </li>
-			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			        <li>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">AHSRA Demo 2000 (Japan)</h4>
@@ -142,7 +144,7 @@
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">CHAMELEON</h4>
@@ -153,8 +155,8 @@
 			            </div>
 			          </div>
 			        </li>
-			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			        <li>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">DARPA Demo III</h4>
@@ -166,7 +168,7 @@
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">AARCOS (Research Action for Secure Driving) (France)</h4>
@@ -177,8 +179,8 @@
 			            </div>
 			          </div>
 			        </li>
-			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			        <li>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">CarTALK 2000</h4>
@@ -190,7 +192,7 @@
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">NVENT (Intelligent traffic and user-oriented technology) (Germany)</h4>
@@ -201,8 +203,8 @@
 			            </div>
 			          </div>
 			        </li>
-			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			        <li>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">PREVENT (EU)</h4>
@@ -214,7 +216,7 @@
 			          </div>
 			        </li>
 			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">DARPA Grand Challenge II</h4>
@@ -225,8 +227,8 @@
 			            </div>
 			          </div>
 			        </li>
-			        <li class="timeline-inverted">
-			          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+			        <li>
+			          <div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
 			          <div class="timeline-panel">
 			            <div class="timeline-heading">
 			              <h4 class="timeline-title">DARPA Grand Challenge III</h4>
