adding networked communications and reliability paragraphs to website

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				<div class = "row">
 					<center><h2>Networked Communications</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<p>Autonomous vehicles today work on various networks.  Two different types of network communication exist and are viable options for the future.  One option is vehicle to infrastructure communication in which the autonomous cars are talking with a an overarching infrastructure that relays commands and necessary data to the cars.  The other communication system is vehicle to vehicle.  With this idea, cars hold most of the information that they already need, and what they are missing they collect through communication with other autonomous vehicles. [1] There is the possibility of some combination of the two as well, though most self driving cars today use vehicle to infrastructure.  Machine learning offers the cars to be able to learn from each other.  This would be the optimization of vehicle to vehicle communication because as one car learns valuable information, it can relay such data to other cars.  The autonomous cars essentially would be able to teach themselves everything necessary to be as efficient as possible, once established with its needed base information.</p>
 						<ul>
 							<li>Telematics</li>
 								<ul>
@@ -131,6 +132,7 @@
 				<div class = "row">
 					<center><h2>Reliability</h2></center>
 					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<p>Autonomous cars adoption depends highly upon their reliability.  Within the last 5 years, self driving cars have made huge leaps in gaining reliability.  They were initially run through simulations.  Once they gained reliability in simulations, self driving cars hit the road.  While they seemed to operate mostly as planned, testing in the real world revealed the many flaws of human drivers. [17] Autonomous cars were altered to adjust to human errors as best a they could.  Fewer and fewer mistakes arose as machine learning was able to adapt to human behavior.  Autonomous cars today drive hundreds of thousands of miles without mistakes, gaining  confidence in their reliability.  Mistakes made by autonomous cars seem to be very peculiar edge cases, but never the less add to increased reliability. [7]  The future reliability of autonomous cars will be based on the capabilities of machine learning to find human and machine error and make appropriate changes to the cars driving behavior.</p>
 						<ul>
 							<li><a href = "http://search.proquest.com/docview/1771016658?pq-origsite=summon&accountid=29120">Source</a>Google’s self-driving car hits bus</li>
 							<li>Miscalculated bus behavior</li>
