adding meeting minutes

--- a/minutes/index.html
+++ b/minutes/index.html
@@ -51,6 +51,47 @@
 			</div>
 		</section>
 
+		<section>
+			<div class = "container">
+				<div class = "row">
+					<div class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<h2>Meeting Minutes</h2>
+						<ul>
+							<li>September 21st, 2016</li>
+							<ul>
+								<li>Divided up the research - Tom focused on chapter 4, Jake focused on chapter 6, Joe focused on chapter 5, Alex focused on chapter 3</li>
+								<li>Set up Google Doc</li>
+								<li>Started to add content to website and make a simple template</li>
+							</ul>
+							<li>September 24th, 2016</li>
+							<ul>
+								<li>Divided up the next two chapters</li>
+								<li>Jake and Joe focused on chapter 7</li>
+								<li>Tom and Alex focused on chapter 8</li>
+							</ul>
+							<li>September 28th, 2016</li>
+							<ul>
+								<li>Started creating the powerpoint</li>
+								<li>Determined conclusions</li>
+								<li>Discussed powerpoint arguments and order of slides</li>
+								<li>Divided up the next two chapters</li>
+								<li>Jake and Alex focused on chapter 9</li>
+								<li>Tom and Joe focused on chapter 10</li>
+							</ul>
+							<li>October 5th, 2016</li>
+							<ul>
+								<li>Corrected Powerpoint slideshow based Professor’s remarks</li>
+								<li>Finalized website material and layout</li>
+								<li>Prepared presentation</li>
+								<li>Finanized speaker notes</li>
+							</ul>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="../css/styles.css" rel="stylesheet">
