small style change to home page and adding references

--- a/references/index.html
+++ b/references/index.html
@@ -58,9 +58,28 @@
 						<div class="page-header">
 					        <h2>References</h2>
 					    </div>
-						<ul>
-							<li>Hi</li>
-						</ul>
+						<ol>
+							<li>M. U. Iqbal and S. Lim, "Privacy Implications of Automated GPS Tracking and Profiling," in IEEE Technology and Society Magazine, vol. 29, no. 2, pp. 39-46, Summer 2010. doi: 10.1109/MTS.2010.937031 URL: http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=5475093&amp;isnumber=5475068</li>
+							<li>Boeglin, Jack. "The costs of self-driving cars: reconciling freedom and privacy with tort liability in autonomous vehicle regulation." Yale Journal of Law &amp; Technology 17.1 (2014): 171+. General OneFile. Web. 19 Sept. 2016. URL http://libraries.state.ma.us.ezproxy.wpi.edu/login?gwurl=http://go.galegroup.com.ezproxy.wpi.edu/ps/i.do?p=ITOF&amp;sw=w&amp;u=mlin_c_worpoly&amp;v=2.1&amp;it=r&amp;id=GALE%7CA420050557&amp;sid=summon&amp;asid=76d269a69405dd397765bfe4d32e06a1</li>
+							<li>Lafrance, Adrienne.  How Self Driving Cars Will Threaten Privacy.  2016.  http://www.theatlantic.com/technology/archive/2016/03/self-driving-cars-and-the-looming-privacy-apocalypse/474600/v</li>
+							<li>J. Petit and S. E. Shladover, "Potential Cyberattacks on Automated Vehicles," in IEEE Transactions on Intelligent Transportation Systems, vol. 16, no. 2, pp. 546-556, April 2015. doi: 10.1109/TITS.2014.234227.  http://ieeexplore.ieee.org.ezproxy.wpi.edu/xpls/icp.jsp?arnumber=6899663#cited-by</li>
+							<li>Sam Abuelsamid.  Cyber Security Is Imperative Before Deploying Autonomous Vehicles.  http://www.navigantresearch.com/blog/cyber-security-is-imperative-before-deploying-autonomous-vehicles</li>
+							<li>Eray Yag ̆dereli, Cemal Gemci and A Ziya Aktas.  A study on cybersecurity of autonomous and unmanned vehicles.  dms.sagepub.com/content/12/4/369.full.pdf+html</li>
+							<li>Croy, Bethe.  IMPO's Top 5 Of The Week: Tesla Job Labor Dispute, Google's Autonomous Car Accident And More.  2016.  http://search.proquest.com/docview/1771016658?pq-origsite=summon&amp;accountid=29120</li>
+							<li>Can a Self Driving, Autonomous Car Really React in an Accident?  Slaw.  2015.  http://wpi.aci.info/view/1464f257c855c0c0128/151c518857c00110006</li>
+							<li>Novella, Steven.  Autonomous Cars and Ethics.  NeuroLogica Blog.  2015.   http://wpi.aci.info/view/1427c3f7cbf114a0104/15116537d2800010003</li>
+							<li>Annual report warns that driverless cars could disrupt AllState’s insurance business.  2016.  http://www.driverless-future.com/?p=911</li>
+							<li>Lin, Patrick [Ted-ed].  (December 8, 2015).  The ethical dilemma of self-driving cars.  https://www.youtube.com/watch?v=ixIoDYVfKA0</li>
+							<li></li>
+							<li>Alex Forrest, Mustafa Konca.  Autonomous Cars and Society.  2007. https://web.wpi.edu/Pubs/E-project/Available/E-project-043007-205701/unrestricted/IQPOVP06B1.pdf</li>
+							<li>Murray, C. J. (2015, November). Teaching autonomous cars to learn: machine learning techniques will enable self-driving cars to make more effective use of sensor data. Design News, 70(11), 42+. Retrieved from http://libraries.state.ma.us/login?gwurl=http://go.galegroup.com/ps/i.do?p=GRGM&amp;sw=w&amp;u=mlin_c_worpoly&amp;v=2.1&amp;it=r&amp;id=GALE%7CA443654030&amp;sid=summon&amp;asid=78fff091fac4a8a3a7b9e4fefdff9128 http://go.galegroup.com/ps/i.do?p=GRGM&amp;u=mlin_c_worpoly&amp;id=GALE|A443654030&amp;v=2.1&amp;it=r&amp;sid=summon&amp;userGroup=mlin_c_worpoly&amp;authCount=1</li>
+							<li>Angelov, Plamen.  Autonomous Learning Systems: From Data Streams to Knowledge in Real-time.  2013. http://au4sb9ax7m.search.serialssolutions.com/?V=1.0&amp;L=AU4SB9AX7M&amp;S=JCs&amp;C=TC0000831526&amp;T=marc&amp;tab=BOOKS</li>
+							<li>Torchinsky, Jason. Government's Self-Driving Car Rules Don't Say When Your Car Should Kill You.  2016.  http://jalopnik.com/governments-self-driving-car-rules-dont-say-when-your-c-1786866789</li>
+							<li>A. Belbachir, R. Boutteau, P. Merriaux, J. M. Blosseville and X. Savatier, "From autonomous robotics toward autonomous cars," Intelligent Vehicles Symposium (IV), 2013 IEEE, Gold Coast, QLD, 2013, pp. 1362-1367.  http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=6629656&amp;isnumber=6629437</li>
+							<li>Markus Maurer, J. Christian Gerdes, Barbara Lenz, Hermann Winner.  Autonomous Driving: Technical, Legal, and Social Aspects.  http://link.springer.com/book/10.1007/978-3-662-48847-8</li>
+							<li>Anderson, J. M., Nidhi, K., &amp; Stanley, K. D. (2014). Autonomous Vehicle Technology. Santa Monica, US: RAND Corporation. Retrieved from  http://site.ebrary.com/lib/wpi/detail.action?docID=10833376</li>
+							<li>King, Alanis.  This MIT Online Activity Lets You Choose Who Gets Killed If A Self-Driving Car Wrecks.  2016.  http://jalopnik.com/this-mit-online-activity-lets-you-choose-who-gets-kille-1787333738 &amp; http://moralmachine.mit.edu/</li>
+						</ol>
 					</div>
 				</div>
 			</div>
